<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>my_car_motor_bridge</name>
  <version>0.1.0</version>
  <description>ROS2 motor bridge that converts /cmd_vel to normalized MCU serial packets.</description>
  <maintainer email="atomicw63.546@gmail.com">Bak siu</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>diagnostic_msgs</depend>

  <exec_depend>python3-serial</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
