<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>my_car_web_monitor</name>
  <version>0.1.0</version>
  <description>Browser camera monitoring and ROS2 teleoperation bridge for my_car.</description>
  <maintainer email="atomicw63.546@gmail.com">Bak siu</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>

  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-pil</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>

